@@ -190,6 +190,7 @@ sub gst_network_get_broadcast_ping_cmd
        "mandrake-7.2" => "debian-2.2",
        "mandrake-9.0" => "debian-2.2",
        "mandrake-9.1" => "debian-2.2",
+       "mandrake-9.2" => "debian-2.2",
        "suse-7.0"     => "debian-2.2", # FIXME: assumed that only redhat distros use -b.
        "pld-1.0"      => "redhat-6.2",
        "fedora-1"     => "redhat-6.2",
@@ -1132,6 +1133,7 @@ sub gst_network_get_file
 		"mandrake-7.1" => \&gst_network_rh62_get_file,
 		"mandrake-9.0" => \&gst_network_rh62_get_file,
 		"mandrake-9.1" => \&gst_network_rh62_get_file,
+		"mandrake-9.2" => \&gst_network_rh62_get_file,
     "debian-2.2"   => \&gst_network_deb22_get_file,
     "debian-3.0"   => \&gst_network_deb22_get_file,
     "debian-sarge" => \&gst_network_deb22_get_file,
@@ -2266,6 +2268,7 @@ sub gst_network_ensure_loopback_interface
 	  "mandrake-7.2" => "lo",
 	  "mandrake-9.0" => "lo",
 	  "mandrake-9.1" => "lo",
+	  "mandrake-9.2" => "lo",
 	  "debian-2.2"   => "lo",
     "debian-3.0"   => "lo",
     "debian-sarge" => "lo",
@@ -2372,6 +2375,7 @@ sub gst_network_get_parse_table
 	  "mandrake-7.2" => "redhat-6.2",
     "mandrake-9.0" => "redhat-7.0",
     "mandrake-9.1" => "redhat-7.0",
+    "mandrake-9.2" => "redhat-7.0",
     "debian-2.2"   => "debian-2.2",
     "debian-3.0"   => "debian-2.2",
     "debian-sarge" => "debian-2.2",
@@ -2672,6 +2676,7 @@ sub gst_network_get_interface_parse_table
     "mandrake-7.2" => "redhat-6.2",
     "mandrake-9.0" => "mandrake-9.0",
     "mandrake-9.1" => "mandrake-9.0",
+    "mandrake-9.2" => "mandrake-9.0",
     "debian-2.2"   => "debian-2.2",
     "debian-3.0"   => "debian-3.0",
     "debian-sarge" => "debian-3.0",
@@ -3127,6 +3132,7 @@ sub gst_network_get_replace_table
 	  "mandrake-7.2" => "redhat-6.2",
 	  "mandrake-9.0" => "redhat-7.0",
 	  "mandrake-9.1" => "redhat-7.0",
+	  "mandrake-9.2" => "redhat-7.0",
     "debian-2.2"   => "debian-2.2",
     "debian-3.0" => "debian-2.2",
     "debian-sarge" => "debian-2.2",
@@ -3416,6 +3422,7 @@ sub gst_network_get_interface_replace_table
     "mandrake-7.2" => "redhat-6.2",
     "mandrake-9.0" => "mandrake-9.0",
     "mandrake-9.1" => "mandrake-9.0",
+    "mandrake-9.2" => "mandrake-9.0",
     "debian-2.2"   => "debian-2.2",
     "debian-3.0"   => "debian-3.0",
     "debian-sarge" => "debian-3.0",
