@@ -63,7 +63,7 @@ $version = "@VERSION@";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
               "redhat-7.2", "redhat-7.3", "redhat-8.0", "redhat-9",
               "openna-1.0",
-              "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1",
+              "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1", "mandrake-9.2",
               "debian-2.2", "debian-3.0", "debian-sarge",
               "suse-7.0", "turbolinux-7.0",
               "slackware-8.0.0", "slackware-8.1", "slackware-9.0.0", "slackware-9.1.0",
@@ -429,6 +429,7 @@ sub conf_get_parse_table
    "mandrake-7.2"    => "redhat-7.0",
    "mandrake-9.0"    => "redhat-7.0",
    "mandrake-9.1"    => "redhat-7.0",
+   "mandrake-9.2"    => "redhat-7.0",
 
    "debian-2.2"      => "debian-2.2",
    "debian-3.0"      => "debian-3.0",
@@ -588,6 +589,7 @@ sub conf_get_replace_table
    "mandrake-7.2"    => "redhat-7.0",
    "mandrake-9.0"    => "redhat-7.0",
    "mandrake-9.1"    => "redhat-7.0",
+   "mandrake-9.2"    => "redhat-7.0",
 
    "debian-2.2"      => "debian-2.2",
    "debian-3.0"      => "debian-3.0",
