@@ -71,7 +71,7 @@ $version = "@VERSION@";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
               "redhat-7.2", "redhat-7.3", "redhat-8.0", "redhat-9",
               "openna-1.0",
-              "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1",
+              "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1", "mandrake-9.2",
               "debian-2.2", "debian-3.0", "debian-sarge",
               "suse-7.0", "turbolinux-7.0",
               "slackware-8.0.0", "slackware-8.1", "slackware-9.0.0", "slackware-9.1.0",
@@ -238,6 +238,7 @@ my $logindefs_dist_map = {
   'mandrake-7.2'    => $rh_logindefs_defaults,
   'mandrake-9.0'    => $rh_logindefs_defaults,
   'mandrake-9.1'    => $rh_logindefs_defaults,
+  'mandrake-9.2'    => $rh_logindefs_defaults,
   'pld-1.0'         => $rh_logindefs_defaults,
   'fedora-1'        => $rh_logindefs_defaults,
   'debian-2.2'      => $rh_logindefs_defaults,
